Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 4.7.4
-
Fix Version/s: 4.8.7
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Environment:MacOSX 10.7
-
Commits:6555ba030a29d995b2f53814b7999b81920fa0ce
Description
Growl 1.3 (available through AppStore only, not opensource anymore by the way) doesn't ship GrowlHelperApp that Qt uses (http://qt.gitorious.org/qt/qt/blobs/master/src/gui/util/qsystemtrayicon_mac.mm#line234). So, a Qt app can't use notifications if Growl is >= 1.3.
I've been told that the Growl framework 1.2.2 (still opensource) can speak to plain old Growl and Growl 1.3.
Attachments
Issue Links
- relates to
-
QTBUG-4011 Add support for native notification systems.
-
- Reported
-
-
QTBUG-32335 Add support for Notifications
-
- Reported
-
-
QTBUG-29433 Investigate using the notification center on Mac instead of Growl for QSystemTrayIcon
-
- Closed
-