Backport implementation of OS X QSystemTrayIcon from Qt 5

This patch aims to bring support of OS X >= 10.8 notification center and
update the growl support code.

[ChangeLog][OS X][Nofication] Added support for OS X 10.8 and upper
notification center.

Task-number: QTBUG-21830
Change-Id: Iad19c5e3a915e2caf15730a27ac762c9c11e493c
Reviewed-by: Morten Johan Sørvig <morten.sorvig@theqtcompany.com>
(cherry picked from commit 6555ba030a29d995b2f53814b7999b81920fa0ce)