src/gui/util/qsystemtrayicon_mac.mm
@@ -54,6 +54,9 @@ QT_USE_NAMESPACE
 @class QT_MANGLE_NAMESPACE(QNSImageView);
 
 @interface QT_MANGLE_NAMESPACE(QNSStatusItem) : NSObject
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_8
+    <NSUserNotificationCenterDelegate>
+#endif
 {
    NSStatusItem *item;
    QSystemTrayIcon *icon;
@@ -67,6 +70,10 @@ QT_USE_NAMESPACE
 -(QRectF)geometry;
 - (void)triggerSelector: (id)sender button: (Qt::MouseButton)mouseButton;
 - (void)doubleClickSelector: (id)sender;
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_8
+- (BOOL)userNotificationCenter:(NSUserNotificationCenter *)center shouldPresentNotification:(NSUserNotification *)notification;
+- (void)userNotificationCenter:(NSUserNotificationCenter *)center didActivateNotification:(NSUserNotification *)notification;
+#endif
 @end
 
 @interface QT_MANGLE_NAMESPACE(QNSImageView) : NSImageView
@@ -97,13 +104,26 @@ class QSystemTrayIconSys
    QSystemTrayIconSys(QSystemTrayIcon *icon, QSystemTrayIconPrivate *d) {
       QMacCocoaAutoReleasePool pool;
       item = [[QT_MANGLE_NAMESPACE(QNSStatusItem) alloc] initWithIcon: icon iconPrivate: d];
+      if (QSysInfo::MacintoshVersion >= QSysInfo::MV_10_8) {
+         [[NSUserNotificationCenter defaultUserNotificationCenter] setDelegate:item];
+      }
    }
    ~QSystemTrayIconSys() {
       QMacCocoaAutoReleasePool pool;
       [[[item item] view] setHidden: YES];
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_8
+        if (QSysInfo::MacintoshVersion >= QSysInfo::MV_10_8) {
+            [[NSUserNotificationCenter defaultUserNotificationCenter] setDelegate:nil];
+        }
+#endif
       [item release];
    }
-   QT_MANGLE_NAMESPACE(QNSStatusItem) *item;
+    
+   void emitMessageClicked() {
+      emit [item icon]->messageClicked();
+   }
+
+    QT_MANGLE_NAMESPACE(QNSStatusItem) *item;
 };
 
 void QSystemTrayIconPrivate::install_sys()
@@ -182,82 +202,80 @@ bool QSystemTrayIconPrivate::supportsMessages_sys()
 void QSystemTrayIconPrivate::showMessage_sys(const QString &title, const QString &message,
       QSystemTrayIcon::MessageIcon icon, int)
 {
+    if (!sys)
+        return;
 
-   if (sys) {
-#ifdef QT_MAC_SYSTEMTRAY_USE_GROWL
-      // Make sure that we have Growl installed on the machine we are running on.
-      QCFType<CFURLRef> cfurl;
-      OSStatus status = LSGetApplicationForInfo(kLSUnknownType, kLSUnknownCreator,
-                        CFSTR("growlTicket"), kLSRolesAll, 0, &cfurl);
-      if (status == kLSApplicationNotFoundErr) {
-         return;
-      }
-      QCFType<CFBundleRef> bundle = CFBundleCreate(0, cfurl);
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_8
+    if (QSysInfo::MacintoshVersion >= QSysInfo::MV_10_8) {
+        NSUserNotification *notification = [[NSUserNotification alloc] init];
+        notification.title = [NSString stringWithUTF8String:title.toUtf8().data()];
+        notification.informativeText = [NSString stringWithUTF8String:message.toUtf8().data()];
 
-      if (CFStringCompare(CFBundleGetIdentifier(bundle), CFSTR("com.Growl.GrowlHelperApp"),
-                          kCFCompareCaseInsensitive |  kCFCompareBackwards) != kCFCompareEqualTo) {
-         return;
-      }
-      QPixmap notificationIconPixmap;
-      if (icon == QSystemTrayIcon::Information) {
-         notificationIconPixmap = QApplication::style()->standardPixmap(QStyle::SP_MessageBoxInformation);
-      } else if (icon == QSystemTrayIcon::Warning) {
-         notificationIconPixmap = QApplication::style()->standardPixmap(QStyle::SP_MessageBoxWarning);
-      } else if (icon == QSystemTrayIcon::Critical) {
-         notificationIconPixmap = QApplication::style()->standardPixmap(QStyle::SP_MessageBoxCritical);
-      }
-      QTemporaryFile notificationIconFile;
-      QString notificationType(QLatin1String("Notification")), notificationIcon,
-              notificationApp(QApplication::applicationName());
-      if (notificationApp.isEmpty()) {
-         notificationApp = QLatin1String("Application");
-      }
-      if (!notificationIconPixmap.isNull() && notificationIconFile.open()) {
-         QImageWriter writer(&notificationIconFile, "PNG");
-         if (writer.write(notificationIconPixmap.toImage())) {
-            notificationIcon = QLatin1String("image from location \"file://") + notificationIconFile.fileName() +
-                               QLatin1String("\"");
-         }
-      }
-      const QString script(QLatin1String(
-                              "tell application \"System Events\"\n"
-                              "set isRunning to (count of (every process whose bundle identifier is \"com.Growl.GrowlHelperApp\")) > 0\n"
-                              "end tell\n"
-                              "if isRunning\n"
-                              "tell application id \"com.Growl.GrowlHelperApp\"\n"
-                              "-- Make a list of all the notification types (all)\n"
-                              "set the allNotificationsList to {\"") + notificationType + QLatin1String("\"}\n"
+        [[NSUserNotificationCenter defaultUserNotificationCenter] deliverNotification:notification];
 
-                                    "-- Make a list of the notifications (enabled)\n"
-                                    "set the enabledNotificationsList to {\"") + notificationType + QLatin1String("\"}\n"
-
-                                          "-- Register our script with growl.\n"
-                                          "register as application \"") + notificationApp +
-                           QLatin1String("\" all notifications allNotificationsList default notifications enabledNotificationsList\n"
-
-                                         "--	Send a Notification...\n") +
-                           QLatin1String("notify with name \"") + notificationType +
-                           QLatin1String("\" title \"") + title +
-                           QLatin1String("\" description \"") + message +
-                           QLatin1String("\" application name \"") + notificationApp +
-                           QLatin1String("\" ")  + notificationIcon +
-                           QLatin1String("\nend tell\nend if"));
-      qt_mac_execute_apple_script(script, 0);
-#elif 0
-      Q_Q(QSystemTrayIcon);
-      NSView *v = [[sys->item item] view];
-      NSWindow *w = [v window];
-      w = [[sys->item item] window];
-      qDebug() << w << v;
-      QPoint p(qRound([w frame].origin.x), qRound([w frame].origin.y));
-      qDebug() << p;
-      QBalloonTip::showBalloon(icon, message, title, q, QPoint(0, 0), msecs);
-#else
-      Q_UNUSED(icon);
-      Q_UNUSED(title);
-      Q_UNUSED(message);
+        return;
+    }
 #endif
-   }
+
+#ifdef QT_MAC_SYSTEMTRAY_USE_GROWL
+    // Make sure that we have Growl installed on the machine we are running on.
+    QCFType<CFURLRef> cfurl;
+    OSStatus status = LSGetApplicationForInfo(kLSUnknownType, kLSUnknownCreator,
+                                              CFSTR("growlTicket"), kLSRolesAll, 0, &cfurl);
+    if (status == kLSApplicationNotFoundErr)
+        return;
+    QCFType<CFBundleRef> bundle = CFBundleCreate(0, cfurl);
+
+    if (CFStringCompare(CFBundleGetIdentifier(bundle), CFSTR("com.Growl.GrowlHelperApp"),
+                kCFCompareCaseInsensitive |  kCFCompareBackwards) != kCFCompareEqualTo)
+        return;
+
+    QPixmap notificationIconPixmap;
+    if (icon == QSystemTrayIcon::Information)
+        notificationIconPixmap = QApplication::style()->standardPixmap(QStyle::SP_MessageBoxInformation);
+    else if (icon == QSystemTrayIcon::Warning)
+        notificationIconPixmap = QApplication::style()->standardPixmap(QStyle::SP_MessageBoxWarning);
+    else if (icon == QSystemTrayIcon::Critical)
+        notificationIconPixmap = QApplication::style()->standardPixmap(QStyle::SP_MessageBoxCritical);
+
+    QTemporaryFile notificationIconFile;
+    QString notificationType(QLatin1String("Notification")), notificationIcon, notificationApp(QApplication::applicationName());
+    if (notificationApp.isEmpty())
+        notificationApp = QLatin1String("Application");
+    if (!notificationIconPixmap.isNull() && notificationIconFile.open()) {
+        QImageWriter writer(&notificationIconFile, "PNG");
+        if (writer.write(notificationIconPixmap.toImage()))
+            notificationIcon = QLatin1String("image from location \"file://") + notificationIconFile.fileName() + QLatin1String("\"");
+    }
+    const QString script(QLatin1String(
+        "tell application \"System Events\"\n"
+        "set isRunning to (count of (every process whose bundle identifier is \"com.Growl.GrowlHelperApp\")) > 0\n"
+        "end tell\n"
+        "if isRunning\n"
+        "tell application id \"com.Growl.GrowlHelperApp\"\n"
+        "-- Make a list of all the notification types (all)\n"
+        "set the allNotificationsList to {\"") + notificationType + QLatin1String("\"}\n"
+
+        "-- Make a list of the notifications (enabled)\n"
+        "set the enabledNotificationsList to {\"") + notificationType + QLatin1String("\"}\n"
+
+        "-- Register our script with growl.\n"
+        "register as application \"") + notificationApp + QLatin1String("\" all notifications allNotificationsList default notifications enabledNotificationsList\n"
+
+        "-- Send a Notification...\n") +
+        QLatin1String("notify with name \"") + notificationType +
+        QLatin1String("\" title \"") + title +
+        QLatin1String("\" description \"") + message +
+        QLatin1String("\" application name \"") + notificationApp +
+        QLatin1String("\" ")  + notificationIcon +
+        QLatin1String("\nend tell\nend if"));
+    qt_mac_execute_apple_script(script, 0);
+#else
+    Q_UNUSED(icon);
+    Q_UNUSED(title);
+    Q_UNUSED(message);
+#endif
+
 }
 QT_END_NAMESPACE
 
@@ -441,6 +459,20 @@ QT_END_NAMESPACE
    }
    qtsystray_sendActivated(icon, QSystemTrayIcon::DoubleClick);
 }
+
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_8
+- (BOOL)userNotificationCenter:(NSUserNotificationCenter *)center shouldPresentNotification:(NSUserNotification *)notification {
+    Q_UNUSED(center);
+    Q_UNUSED(notification);
+    return YES;
+}
+
+- (void)userNotificationCenter:(NSUserNotificationCenter *)center didActivateNotification:(NSUserNotification *)notification {
+    Q_UNUSED(center);
+    Q_UNUSED(notification);
+    emit iconPrivate->sys->emitMessageClicked();
+}
+#endif
 
 @end
 
